# project-zero-app

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_ANALYSIS.md  Makefile  README.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: INDEX.md  (+3 more)
services/auth-service/: .coverage  .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  auth_service.db  deploy.sh  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  swagger.json
services/auth-service/scripts/: init_db.py
services/auth-service/src/: __init__.py  database.py
services/auth-service/src/api/: __init__.py  auth.py  health.py
services/auth-service/src/auth_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/auth-service/src/models/: __init__.py  user.py
services/auth-service/src/schemas/: auth.py
services/auth-service/src/services/: auth_service.py  token_service.py
services/auth-service/src/utils/: jwt_utils.py  password.py  rate_limiter.py  token_blacklist.py
services/auth-service/tests/contract/: __init__.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_verify.py  test_health.py
services/auth-service/tests/integration/: test_login_flow.py  test_logout_flow.py  test_rate_limiting.py  test_token_refresh.py  test_token_verification.py  test_validation.py
services/order-service/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  swagger.json
services/order-service/alembic/: env.py
services/order-service/alembic/versions/: 20250925_2328_001_initial_schema.py
services/order-service/scripts/: init_db.py
services/order-service/src/: config.py  database.py  logging_config.py
services/order-service/src/api/: admin.py  orders.py  shipping.py
services/order-service/src/clients/: auth_client.py  cart_client.py  product_client.py
services/order-service/src/models/: __init__.py  order.py  order_item.py  order_modification.py  shipping_address.py
services/order-service/src/schemas/: __init__.py  common.py  orders.py  shipping.py
services/order-service/src/services/: order_service.py  shipping_service.py  tax_service.py
services/order-service/src/utils/: validation.py
services/order-service/tests/: conftest.py
services/order-service/tests/contract/: test_admin_orders.py  test_health.py  test_orders_detail.py  test_orders_get.py  test_orders_post.py  test_shipping_calculate.py
services/order-service/tests/integration/: test_order_creation_flow.py
services/payment-service/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  swagger.json
services/payment-service/scripts/: init_db.py
services/payment-service/src/: main.py
services/payment-service/src/api/: payment_methods.py  payments.py  webhooks.py
services/payment-service/src/integrations/: auth_service.py  order_service.py
services/payment-service/src/models/: database.py  payment.py  payment_method.py  payment_status_history.py  webhook_event.py
services/payment-service/src/services/: payment_processor.py  payment_validator.py  webhook_simulator.py
services/payment-service/src/utils/: logging.py  security.py
services/payment-service/tests/contract/: test_payment_details.py  test_payment_methods_delete.py  test_payment_methods_get.py  test_payment_methods_post.py  test_payment_status.py  test_payments_get.py  test_payments_post.py  test_webhooks.py
services/payment-service/tests/integration/: test_payment_failures.py  test_payment_flow.py  test_payment_methods.py  test_webhook_simulation.py
services/payment-service/tests/performance/: test_concurrent_payments.py
services/payment-service/tests/unit/: test_payment_processor.py  test_payment_validator.py  test_webhook_simulator.py
services/product-catalog-service/: Dockerfile  Makefile  README.md  product_catalog.db  pyproject.toml  swagger.json
services/product-catalog-service/scripts/: init_db.py
services/product-catalog-service/src/: config.py  database.py  main.py
services/product-catalog-service/src/api/: __init__.py  health.py  products.py
services/product-catalog-service/src/auth/: __init__.py  dependencies.py
services/product-catalog-service/src/data/: __init__.py  seed_data.py
services/product-catalog-service/src/models/: __init__.py  product.py
services/product-catalog-service/src/schemas/: __init__.py  product.py
services/product-catalog-service/src/services/: __init__.py  product_service.py
services/product-catalog-service/tests/contract/: test_health.py  test_health_ready.py  test_products_category.py  test_products_create.py  test_products_get.py  test_products_list.py  test_products_search.py  test_products_update.py
services/product-catalog-service/tests/integration/: test_admin_management.py  test_customer_browsing.py  test_error_handling.py
services/product-catalog-service/tests/unit/: test_auth_dependencies.py  test_product_service.py  test_schemas.py
services/user-profile-service/: .env.example  .ruff.toml  Dockerfile  README.md  main.py  pyproject.toml
services/user-profile-service/scripts/: init_db.py
services/user-profile-service/src/: app.py  config.py  database.py  dependencies.py
services/user-profile-service/src/auth/: __init__.py  jwt_auth.py
services/user-profile-service/src/middleware/: __init__.py  correlation.py  error_handler.py
services/user-profile-service/src/models/: __init__.py  activity_log.py  address.py  base.py  user_preferences.py  user_profile.py
services/user-profile-service/src/routers/: __init__.py  activity.py  addresses.py  admin.py  health.py  preferences.py  profiles.py
services/user-profile-service/src/schemas/: __init__.py  activity.py  address.py  error.py  health.py  preferences.py  profile.py
services/user-profile-service/src/services/: __init__.py  activity_service.py  address_service.py  auth_service.py  preferences_service.py  profile_service.py
(+417 files in other folders)
