[project]
name = "order-service"
version = "1.0.0"
description = "Order Processing Service for Project Zero App"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0,<0.105.0",
    "sqlalchemy>=2.0.0,<2.1.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "httpx>=0.25.0,<0.26.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "alembic>=1.12.0,<1.13.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "RUF"]
ignore = ["ANN101", "ANN102", "S101"]  # self annotation, assert statements

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
